--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@ footer{
     /* 🛠️ GÄSTEBUCH KORREKTUREN FÜR MOBILE 🛠️ */
     .guestbook-section-custom{
         /* Abschnitt behält die geringe Höhe */
-        min-height: 420px; 
-        height: 220px; 
+        min-height: 320px; 
+        height: 320px; 
         background-size: cover; 
     }
     .guestbook-main-content{
@@ -517,19 +517,19 @@ footer{
     }
     .guestbook-form-wrapper{
         /* Formular maximal kompakter machen und neu positionieren */
-        background: rgba(0, 0, 0, 0.75); 
-        border:2px solid var(--gold-light);
-        box-shadow:0 0 20px var(--gold-shadow);
+        background: rgba(0, 0, 0, 0.0); 
+        border:0px solid var(--gold-light);
+        box-shadow:0 0 0px var(--gold-shadow);
         
         /* Absolute Zentrierung im 320px hohen Container */
         position: absolute; 
-        top: 59%; 
+        top: 60%; 
         left: 51%; 
         transform: translate(-52%, -51%); 
 
-        max-width:214px; /* SCHMALER */
-        width: 95%; 
-        height: 260px; /* KÜRZER */
+        max-width:174px; /* SCHMALER */
+        width: 45%; 
+        height: 210px; /* KÜRZER */
         margin:0;
         padding:5px 8px; 
         border-radius: 15px;
@@ -540,14 +540,14 @@ footer{
         justify-content: center; 
     }
     .guestbook-form-wrapper::before{
-        content:"Gästebuch";
+        content:"";
         font-size:1.9em; 
         margin-bottom:6px; 
     }
     .guestbook-form-wrapper input[type="text"],
     .guestbook-form-wrapper textarea {
         width: 75%; 
-        max-width: 230px; /* SCHMALER */
+        max-width: 150px; /* SCHMALER */
         font-size: 12px; 
         padding: 4px 8px; 
         margin-bottom: 5px; 
